<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_fragment_margin_text_input_layout"
        android:hint="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_fragment_margin_text_input_layout"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_fragment_margin_text_input_layout"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@id/password_text_input_layout"
        app:layout_constraintStart_toStartOf="@id/password_text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forget_password_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_fragment_margin_text_input_layout"
        android:text="@string/forget_password"
        app:layout_constraintStart_toStartOf="@id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_fragment_margin_text_input_layout"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>